--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "build": "react-scripts build",
+    "build": "nodemon server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
