--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start --host --port 3000",
-    "build": "react-scripts build --host --port 3000",
+    "start": "react-scripts start --port 3000",
+    "build": "react-scripts build --port 3000",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
